--- a/theessentialmachinemap.html
+++ b/theessentialmachinemap.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Add Map</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdy1uU2DPgQwarHvxAbKd2ypLrMZHNmQ&callback=initMap&libraries=&v=weekly"
-            defer></script>
-    <style type="text/css">
-        /* Set the size of the div element that contains the map */
-        #map {
-            height: 400px;
-            /* The height is 400 pixels */
-            width: 100%;
-            /* The width is the width of the web page */
-        }
-    </style>
-    <script>
-        // Initialize and add the map
-        function initMap() {
-            // The location of Uluru
-            //const uluru = { lat: 43.00066991610012, lng: -78.78916612954909 };
-            const uluru = { lat: 43.00066991610012, lng: -78.78916612954909 };
-            // The map, centered at Uluru
-            const map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 4,
-                center: uluru,
-            });
-            // The marker, positioned at Uluru
-            const marker = new google.maps.Marker({
-                position: uluru,
-                map: map,
-            });
-        }
-    </script>
-    <script>
-        // Initialize and add the map
-        function initMap2() {
-            // The location of Uluru
-            //const uluru = { lat: 43.00066991610012, lng: -78.78916612954909 };
-            const uluru2 = { lat: 42.970840, lng: -78.631310 };
-            // The map, centered at Uluru
-            const map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 4,
-                center: uluru2,
-            });
-            // The marker, positioned at Uluru
-            const marker = new google.maps.Marker({
-                position: uluru2,
-                map: map,
-            });
-        }
-    </script>
-</head>
-  <body>
-    <h3>My Google Maps Demo</h3>
-    <!--The div element for the map -->
-    <div id="map"></div>
-  </body>
+    <head>
+        <title>map</title>
+        <meta name="viewport" content="initial-scale=1.0">
+        <meta charset="utf-8">
+        <style>
+            #map {
+                height: 100%;
+            }
+            html, body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="map"></div>
+        <script>
+            var map;
+            function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: 42.970840, lng: -78.631310},
+                    zoom: 8
+                });
+
+                //call marker function
+                addMarker({lat:42.970840,lng:-78.631310});
+                addMarker({lat:43.001091415135754,lng:-78.78972850259998});
+                addMarker({lat:13.3550,lng:103.8552});
+                addMarker({lat:11.9924,lng:105.4645});
+
+                //add marker function
+                function addMarker(coords){
+                    var marker = new google.maps.Marker({
+                        position:coords,
+                        map:map,
+                    });
+                }
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdy1uU2DPgQwarHvxAbKd2ypLrMZHNmQ&callback=initMap&libraries=&v=weekly"
+        defer></script>
+    </body>
 </html>
